# advent_of_code

./: .gitignore  README.md
2021/javascript/day_1/: day_1_1.js  day_1_2.js  task.txt
2021/javascript/day_10/: day_10_1.js
2021/javascript/day_11/: day_11_1.js  day_11_2.js
2021/javascript/day_2/: day_2_1.js  day_2_2.js  task.txt
2021/javascript/day_3/: day_3_1.js  day_3_2.js  task.txt
2021/javascript/day_4/: day_4_1.js  day_4_2.js  task.txt
2021/javascript/day_5/: day_5_1.js  day_5_2.js  task.txt
2021/javascript/day_6/: day_6_1.js  day_6_2.js  task.txt
2021/javascript/day_7/: day_7_1.js  day_7_2.js  task.txt
2021/javascript/day_8/: day_8_1.js  day_8_2.js  task.txt
2021/javascript/day_9/: day_9_1.js
2022/cpp/: CMakeLists.txt  main.cpp
2022/cpp/day_1/: day_1.h  day_1_1.cpp  day_1_2.cpp
2022/cpp/day_2/: day_2.h  day_2_1.cpp  day_2_2.cpp
2022/cpp/day_3/: day_3.h  day_3_1.cpp  day_3_2.cpp
2022/javascript/day_01/: day_1_1.js  day_1_2.js
2022/javascript/day_02/: day_2_1.js  day_2_2.js
2022/javascript/day_03/: day_3_1.js
2022/javascript/day_04/: day_4_1.js  day_4_2.js
2022/javascript/day_05/: day_5_2.js
2022/javascript/day_06/: day_6_1.js  day_6_2.js
2022/javascript/day_07/: day_7_1.js
2022/javascript/day_08/: day_8_1.js  day_8_2.js
2022/javascript/day_09/: day_9_1.js  day_9_2.js
2022/javascript/day_1/: day_1_1.js  day_1_2.js
2022/javascript/day_10/: day_10_1.js  day_10_2.js
2022/javascript/day_11/: day_11_1.js  day_11_2.js
2022/javascript/day_12/: day_12_1.js  day_12_2.js
2022/javascript/day_13/: day_13_1.js
(+38 files in other folders)
