cmake_minimum_required(VERSION 3.26)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp main.cpp
        day_1/day_1.h
        day_1/day_1_1.cpp
        day_1/day_1_2.cpp
        day_2/day_2_1.cpp
        day_2/day_2_2.cpp
        day_2/day_2.h
        day_3/day_3_1.cpp
        day_3/day_3_2.cpp)
